--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,3 +1,28 @@
+@mixin font($font_name, $file_name, $weight, $style) {
+
+	@font-face {
+	font-family: $font_name;
+	font-display: swap;
+	src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
+	font-weight: #{$weight};
+	font-style: #{$style};
+	}
+	}
+
+@import "fonts";
+
 body {
 	font-size: 14px;
+	display: flex;
+}
+
+span {
+	font-size: 20px;
+	@media (max-wight: 767px) {
+		font-size: 15px;
+	}
+}
+
+div {
+	background: url("../img/img.jpg");
 }
